--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.cinematic": "1.0.0",
     "com.unity.feature.gameplay-storytelling": "1.0.0",
